; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-util.c_ff_format_desc_video.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-util.c_ff_format_desc_video.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_format_desc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_format_desc_video(%struct.ff_format_desc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ff_format_desc*, align 8
  store %struct.ff_format_desc* %0, %struct.ff_format_desc** %3, align 8
  %4 = load %struct.ff_format_desc*, %struct.ff_format_desc** %3, align 8
  %5 = icmp ne %struct.ff_format_desc* %4, null
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load %struct.ff_format_desc*, %struct.ff_format_desc** %3, align 8
  %8 = getelementptr inbounds %struct.ff_format_desc, %struct.ff_format_desc* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %2, align 4
  br label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %11

11:                                               ; preds = %10, %6
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
